--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,21 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
 
   <body>
+    <header class="bg-secondary p-3">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center text-white ">
+          <h2>Wikinimous</h2>
+          <%= link_to"New article", new_article_path, class: "btn btn-primary" %>
+        </div>
+      </div>
+    </header>
+
     <%= yield %>
   </body>
 </html>
